<resources>
    <string name="app_name">DoUslug</string>
    <string name="upcoming_visits">Nadchodzące wizyty</string>
    <string name="dodaj_wizyte">DODAJ WIZYTE</string>
    <string name="wyswietl_wizyty">WYśWIETL WIZYTY</string>
    <string name="all_visits">Wszystkie wizyty:</string>
    <string name="calendar">Kalendarz</string>
    <string name="clients">Klienci</string>
    <string name="liczba_wizyt_w_tym_dniu">Liczba wizyt w tym dniu:</string>
    <string name="calendar_day_view_title">Wybrany dzień:</string>
    <string name="home_screen">Ekran główny</string>
    <string name="services">Usługi</string>
    <string name="finances">Finanse</string>
    <string name="settings">Ustawienia</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Hasło</string>
    <string name="prompt_password2">Powtórz hasło</string>
    <string name="action_sign_in">Zaloguj</string>
    <string name="action_sign_in_short">Zaloguj</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_title">Logowanie</string>
    <string name="login_button" />
    <string name="register">Zarejestruj</string>
    <string name="prompt_phone">Numer telefonu</string>
    <string name="prompt_official_name">Oficjalna nazwa</string>
    <string name="register_title">Rejestracja</string>
    <string name="logout">Wyloguj</string>
    <string name="logout_success">Pomyślnie wylogowano</string>
    <string name="calendar_view_title">Tytuł ekranu</string>
    <string name="settings_logged_as">Zalogowano jako</string>
    <string name="settings_calendar">Domyślny widok kalendarza</string>
    <string name="settings_calendar_day">Dzień</string>
    <string name="settings_calendar_week">Tydzień</string>
    <string name="settings_calendar_month">Miesiąc</string>
    <string name="save">Zapisz</string>
    <string name="settings_saved">Pomyślnie zapisano zmiany</string>
    <string name="to_settle">Do rozliczenia:</string>
    <string name="monthly_revenue">Zysk miesięczny:</string>
    <string name="not_settled_visits">Nierozliczone wizyty:</string>
    <string name="remind">PRZYPOMNIJ</string>
    <string name="title_activity_all_visits">AllVisitsActivity</string>
    <string name="show_week">wyświetl tydzień</string>
    <string name="show_day">wyświetl dzień</string>
    <string name="all_visits_button">Wszystkie wizyty</string>
</resources>