<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <RelativeLayout
        android:id="@+id/settings_top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/settings_back_button"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_alignParentLeft="true"
            android:background="@drawable/back_button" />

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/settings"
            android:textColor="#000000"
            android:textSize="28sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_top_layout">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_logged_as" />

        <View
            android:id="@+id/divider6"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <EditText
            android:id="@+id/settingsEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:enabled="false"
            android:inputType="none" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_official_name" />

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <EditText
            android:id="@+id/settingsOfficialName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_phone" />

        <View
            android:id="@+id/divider5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <EditText
            android:id="@+id/settingsPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_calendar" />

        <View
            android:id="@+id/divider7"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="6dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioCalendarDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/radio_background"
                android:button="@null"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/settings_calendar_day"
                android:textAllCaps="true"
                android:textColor="@drawable/radio_color"
                android:textSize="12sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radioCalendarWeek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/radio_background"
                android:button="@null"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/settings_calendar_week"
                android:textAllCaps="true"
                android:textColor="@drawable/radio_color"
                android:textSize="12sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radioCalendarMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/radio_background"
                android:button="@null"
                android:checked="false"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/settings_calendar_month"
                android:textAllCaps="true"
                android:textColor="@drawable/radio_color"
                android:textSize="12sp"
                android:textStyle="bold" />
        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/settings_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:layout_weight="1"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/save"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>