<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinanceActivity">

    <RelativeLayout
        android:id="@+id/finance_top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/back_button"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_alignParentStart="true"
            android:background="@drawable/back_button" />

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/finances"
            android:textColor="#000000"
            android:textSize="28sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/finance_top_layout">

        <TextView
            android:id="@+id/monthly_revenue_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monthly_revenue"
            android:layout_gravity="center"
            android:fontFamily="@font/comfortaa_bold"
            android:textColor="@android:color/black"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/to_settle_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/to_settle"
            android:fontFamily="@font/comfortaa_bold"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="20sp"/>

        <View
            android:id="@+id/divider6"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/not_settled_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_settled_visits"
            android:fontFamily="@font/comfortaa_bold"
            android:textColor="@android:color/black"
            android:textSize="20sp"/>

        <View
            android:id="@+id/divider1"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="4dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/not_paid_visits_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>