<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".calendar.CalendarMonthActivity">

    <include layout="@layout/calendar_top_layout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <include layout="@layout/change_calendar_type"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <CalendarView
                android:id="@+id/calendar_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/liczba_wizyt_w_tym_dniu"
                    android:layout_marginEnd="5dp"/>

                <TextView
                    android:id="@+id/selectedVisitsNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"/>
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent">
        
        <Button
            android:id="@+id/add_visit_button"
            android:layout_width="320dp"
            android:layout_height="43dp"
            android:textColor="@color/buttonTextColor"
            android:text="@string/dodaj_wizyte"
            android:background="@drawable/orange_button_background"/>

        <Button
            android:id="@+id/show_visits_button"
            android:layout_width="320dp"
            android:layout_height="43dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/wyswietl_wizyty"
            android:background="@drawable/white_button_background"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>